applications/sonarr/sonarr-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sonarr
  labels:
    gateway-access/trusted-lan: "true"
