applications/sonarr/sonarr-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: sonarr
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/part-of: media-stack
spec:
  type: ClusterIP
  clusterIP: 172.30.56.142
  selector:
    app.kubernetes.io/name: sonarr
  ports:
    - name: http
      port: 8989
      targetPort: http
      protocol: TCP
