applications/sonarr/sonarr-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: sonarr
spec:
  parentRefs:
    - name: trusted-lan
      namespace: openshift-ingress
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - sonarr.lan.igou.systems
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sonarr
          port: 8989
          group: ""
          kind: Service
          weight: 1
